2009-03-17  Alejandro Pinheiro  <apinheiro@igalia.com>

	* examples/hildon-pannable-area-touch-list-example.c
	* examples/hildon-pannagle-area-touch-grid-example.c
	* examples/hildon-edit-toolbar-example.c
	* examples/hildon-touch-selector-multi-cells-example.c
	Removed the call to gtk_rc_parse_string, as it is not required since
	some time ago.

2009-03-17  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Modified the default panning
	threshold of the widget to 6px.

	Fixes: NB#105427 (Clicking and dragging ( for pixel values more
	than the threshold value ) within the button is not sending the
	event to the clild)

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c (_create_new_column): Unset GTK_CAN_FOCUS
	for the treeview in the new column. This way, the touch list will never
	grab the focus.

	Fixes: NB#105190 (Text input area of HildonTouchSelectorEntry to
	be selected manually for the HW keys to work)

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c (entry_on_text_changed): Do a simple
	comparison instead of using strcmp(). Fixes a compiler warning as well.

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-docs.sgml: Do not set the library version in the
	document title, use the releaseinfo tag for that purpose instead.

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c (entry_on_text_changed):
	Do not jump to the first item if the text in the entry is removed.

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.52]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-entry.c (hildon_entry_refresh_contents):
	* src/hildon-text-view.c (hildon_text_view_refresh_contents):
	Use "ReversedSecondaryTextColor" for the placeholder text.
