@@ -1,3 +1,11 @@
+2009-03-18  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-main.c (hildon_init):
+	Don't allow hildon_init() to be called more than once.
+
+	Fixes: NB#106607 (hildon_init should issue error message upon
+	successive calls)
+
 2009-03-17  Alejandro Pinheiro  <apinheiro@igalia.com>
 
 	* examples/hildon-pannable-area-touch-list-example.c
